fixed desktop layout problem

--- a/dev/scss/_layout_base.scss
+++ b/dev/scss/_layout_base.scss
@@ -13,9 +13,9 @@ body {
     max-width: 100vw;
     padding-right: 1rem; 
     padding-left: 1rem;
-    // display: flex;
-    // justify-content: center; 
-    // flex-wrap: wrap;
+    display: flex;
+    justify-content: center; 
+    flex-wrap: wrap;
 }
 
 a {
@@ -25,6 +25,7 @@ a {
 
 // Nav
 nav {
+    top: 0;
     background-color: $black;
     height: 3rem;
     width: 90%;
@@ -56,6 +57,7 @@ h1 {
     @include title-unifrakturcook;
     font-size: 13vw;
     text-shadow: 0 10px 10px rgba($white, 0.35);
+    margin-top: 5rem;
     margin-bottom: 1rem;
 }
 
@@ -69,6 +71,11 @@ h1 {
 .hero__content--image {
     height: 40rem;
     background: linear-gradient(180deg, rgba($pink,1) 0%, rgba($black,1) 100%);
+}
+
+
+.introduction__wrapper {
+    padding: 2rem;
 }
 
 .introduction__content {
